--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Login to DockerHub Registry
       run: echo ${{ secrets.DOCKERHUB_PWD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag wangyiyang/tensorboard:$(date +%s)
+      run: docker build . --file Dockerfile --tag wangyiyang/tensorboard:$(date)
     - name: Push the tagged Docker image
-      run: docker push wangyiyang/tensorboard:$(date +%s)
+      run: docker push wangyiyang/tensorboard:$(date)
