--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,6 @@ jobs:
     - name: Login to DockerHub Registry
       run: echo ${{ secrets.DOCKERHUB_PWD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag wangyiyang/tensorboard:$(date)
+      run: docker build . --file Dockerfile --tag wangyiyang/tensorboard:2.13.0
     - name: Push the tagged Docker image
-      run: docker push wangyiyang/tensorboard:$(date)
+      run: docker push wangyiyang/tensorboard:2.13.0
